<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ActSettings">

    <TextView
        android:id="@+id/settings_txt"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.14"
        android:background="@color/colorTextPrimary"
        android:gravity="bottom|end"
        android:paddingBottom="40dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/intro"
        android:textColor="@android:color/white"
        android:textSize="14sp" />
    <TextView
        android:id="@+id/xp_query"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/question_dev"
        android:textColor="@color/colorTextPrimary" />
    <LinearLayout
        android:id="@+id/set_XP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:foregroundGravity="center_vertical"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="1">
        <Button
            android:id="@+id/less_lft"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="2.21"
            android:background="@color/colorTextPrimary"
            android:minHeight="36dp"
            android:minWidth="36dp"
            android:onClick="less"
            android:src="@drawable/chvb_lft_36dp"
            android:text="@string/less" />
        <TextView
            android:id="@+id/usr_xp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="160sp" />
        <Button
            android:id="@+id/more_rgt"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_weight="0.59"
            android:background="@color/colorTextPrimary"
            android:minHeight="36dp"
            android:minWidth="36dp"
            android:onClick="more"
            android:src="@drawable/chvb_rgt_36dp"
            android:text="@string/more" />
    </LinearLayout>
    <Button
        android:id="@+id/btn_settings_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:background="@color/colorPrimaryDark"
        android:text="@string/go"
        android:textColor="@color/white" />
</LinearLayout>


