<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorTextPrimary"
    android:orientation="vertical">

    <WebView
        android:id="@+id/webView1"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:background="@color/colorTextPrimary"
            android:text="@string/back"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_share"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:text="@string/share"
            android:textColor="@color/white" />
        <Button
            android:id="@+id/btn_abt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="bottom"
            android:layout_weight="0.5"
            android:background="@color/colorAccent"
            android:text="@string/about"
            android:textColor="@color/white" />

    </LinearLayout>


</LinearLayout>